Added Buttons for Login and SignUp and started writing HTTPService and UserService

--- a/src/Frontend/scw/src/app/app.component.html
+++ b/src/Frontend/scw/src/app/app.component.html
@@ -1,2 +1,12 @@
+<div class="LogInSignUp-buttons">
+    
+    <button mat-raised-button (click)="SignUp()">Sign Up</button>
+    <button mat-raised-button color="primary" (click)="Login()">Login</button>
+    <button mat-raised-button color="accent">Sign Up</button>    
+    <button mat-raised-button color="warn" (click)="SignUp()">Sign Up</button>
 
-<router-outlet></router-outlet>
+</div>
+<br>
+<div class="SubComponent">
+    <router-outlet></router-outlet>
+</div>
