--- a/src/Frontend/scw/src/styles.scss
+++ b/src/Frontend/scw/src/styles.scss
@@ -1,2 +1,2 @@
-@import '~handsontable/dist/handsontable.full.css';
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/purple-green.css";
