--- a/src/Frontend/scw/src/app/app.component.html
+++ b/src/Frontend/scw/src/app/app.component.html
@@ -1,12 +1,14 @@
-<div class="LogInSignUp-buttons">
-    
-    <button mat-raised-button (click)="SignUp()">Sign Up</button>
-    <button mat-raised-button color="primary" (click)="Login()">Login</button>
-    <button mat-raised-button color="accent">Sign Up</button>    
-    <button mat-raised-button color="warn" (click)="SignUp()">Sign Up</button>
+ <mat-toolbar color="accent" class="header"> 
+    <div *ngIf="!username" class="LogInSignUp-buttons">
+        <button mat-raised-button (click)="Signup()">Sign Up</button>
+        <button mat-raised-button color="primary" (click)="Login()">Login</button>
+    </div>
+    <div *ngIf="username" class="User" >
+        {{username}}
+    </div>    
+</mat-toolbar>
 
-</div>
-<br>
-<div class="SubComponent">
+
+<mat-toolbar class="SubComponent">
     <router-outlet></router-outlet>
-</div>
+</mat-toolbar>
