--- a/src/Frontend/scw/src/app/app.component.scss
+++ b/src/Frontend/scw/src/app/app.component.scss
@@ -1,10 +1,21 @@
-.LogInSignUp-buttons{   
-    float: right;   
-    width: 100%;
-}
 button{
-    margin-right: 0.5%;
+    margin-right: 0.5%;   
+    float: right; 
 }
 .SubComponent{
-    margin-top: 10%;
+    margin-top: 30px ;
+    
+}
+.header{
+    width: 99.5%;
+
+    display: block;//Um die Header Leiste zu zentrieren
+    margin-left: auto;
+    margin-right: auto;
+
+    padding-top: 13px;
+    margin-top: 5px;
+}
+.User{
+    float: right; 
 }
