--- a/src/Frontend/scw/src/styles.scss
+++ b/src/Frontend/scw/src/styles.scss
@@ -1,2 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/purple-green.css";
+@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
+//deeppurple-amber
+//indigo-pink
+//purple-green
