--- a/src/Frontend/scw/src/app/app.component.html
+++ b/src/Frontend/scw/src/app/app.component.html
@@ -9,6 +9,6 @@
 </mat-toolbar>
 
 
-<mat-toolbar class="SubComponent">
+<mat-toolbar color="accent" class="SubComponent">
     <router-outlet></router-outlet>
 </mat-toolbar>
