--- a/src/Frontend/scw/src/app/app.component.scss
+++ b/src/Frontend/scw/src/app/app.component.scss
@@ -3,7 +3,9 @@ button{
     float: right; 
 }
 .SubComponent{
-    margin-top: 30px ;
+    margin-top: 30px;
+    width: 99.5%;
+    height: auto;
 }
 .header{
     width: 99.5%;
