--- a/src/Frontend/scw/src/app/sheet/sheet.component.scss
+++ b/src/Frontend/scw/src/app/sheet/sheet.component.scss
@@ -1,11 +1,5 @@
-.ht_clone_top th {
-  background-color: #F00;
+.hot {
+  width: 200%;
+  height: 1000px;
 }
-.currentRow {
-  background-color: #FF0000 !important;
-}
-.currentCol {
-  background-color: #E7E8EF !important;
-}
-
 
