--- a/src/Frontend/scw/src/app/all-tables/all-tables.component.html
+++ b/src/Frontend/scw/src/app/all-tables/all-tables.component.html
@@ -1,4 +1,4 @@
-<button mat-raised-button accent="primary" style="margin-right: 10px;">
+<button mat-raised-button accent="primary" style="margin-right: 10px;" (click)="AddDataset()">
     Add DataSet
 </button>
 <button mat-raised-button accent="primary">
@@ -6,9 +6,11 @@
 </button>
 <mat-tab-group>
     <mat-tab *ngFor="let tab of tabs;  let index = index" [label]="tab.displayName">
-        <ng-template matTabContent>
-            <app-handsontest [id]=tab.tableRefId></app-handsontest>
+        <ng-template matTabContent >
+            <app-sheet *ngIf="tab.tableType=='DataSet'" [tableId]="tab.tableRefId"></app-sheet>
+            <app-dataset *ngIf="!(tab.tableType=='DataSet')" ></app-dataset>
         </ng-template>
     </mat-tab>
 </mat-tab-group>
 
+<!--[tableId]="tab.tableRefId"-->
