Fixed adding DataSets

--- a/src/Frontend/scw/src/app/sheet/sheet.component.html
+++ b/src/Frontend/scw/src/app/sheet/sheet.component.html
@@ -5,4 +5,5 @@
   licenseKey="non-commercial-and-evaluation">
 </hot-table>
 <button mat-raised-button id="search_field" type="search" placeholder="Search" style="margin-right: 10px;" (click)="onKey($event)">Export file</button>
-<button mat-raised-button id="save_but" (click)="saveDataSet()">Save DataSet</button>
+<button mat-raised-button id="save_but" (click)="saveSheet()" style="margin-right: 10px;">Save Sheet</button>
+<button mat-raised-button (click)="deleteSheet()">Delete Sheet</button>
