--- a/src/Frontend/scw/src/app/all-tables/all-tables.component.html
+++ b/src/Frontend/scw/src/app/all-tables/all-tables.component.html
@@ -1,7 +1,7 @@
 <button mat-raised-button accent="primary" style="margin-right: 10px;" (click)="AddDataset()">
     Add DataSet
 </button>
-<button mat-raised-button accent="primary">
+<button mat-raised-button accent="primary" style="margin-right: 10px;">
     Add Sheet
 </button>
 <mat-tab-group>
@@ -10,7 +10,9 @@
             <app-sheet *ngIf="tab.tableType=='DataSet'" [tableId]="tab.tableRefId"></app-sheet>
             <app-dataset *ngIf="!(tab.tableType=='DataSet')" ></app-dataset>
         </ng-template>
+        
     </mat-tab>
+    
 </mat-tab-group>
 
 <!--[tableId]="tab.tableRefId"-->
