--- a/src/Frontend/scw/src/app/dataset/dataset.component.html
+++ b/src/Frontend/scw/src/app/dataset/dataset.component.html
@@ -1,9 +1,25 @@
+<!--
+<p-contextMenu #contextMenu [model]="contextMenuItems"></p-contextMenu>
+-->
+
 <app-menubar></app-menubar>
 <p-table #dt [columns]="cols" [value]="data" styleClass="p-datatable-responsive" selectionMode="multiple"
-         [(selection)]="selectedRows" [metaKeySelection]="true" [responsive]="true">
+         [(selection)]="selectedRows" [metaKeySelection]="true" [responsive]="true"
+         [(contextMenuSelection)]="selectedRows"
+         [filterDelay]="0" [globalFilterFields]="['A','B','header']">
   <ng-template pTemplate="caption">
+
+    <div class="p-d-flex">
+
+        <span class="p-input-icon-left p-ml-auto">
+            <i class="pi pi-search"></i>
+            <input pInputText type="text" (input)="dt.filterGlobal($event.target, 'contains')" placeholder="Search keyword"/>
+        </span>
+    </div>
     <div class="p-d-flex">
       <button type="button" pButton icon="pi pi-file-o" (click)="dt.exportCSV()" class="p-mr-2"></button>
+      <button type="button" pButton pRipple icon="pi pi-file-pdf" (click)="exportPdf()" class="p-button-warning p-mr-2" pTooltip="PDF" tooltipPosition="bottom"></button>
+      <button type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportExcel()" class="p-button-success p-mr-2"  pTooltip="XLS" tooltipPosition="bottom"></button>
       <button type="button" pButton pRipple icon="pi pi-filter" (click)="dt.exportCSV({selectionOnly:true})"
               class="p-button-info p-ml-auto" pTooltip="Selection Only" tooltipPosition="bottom"></button>
 
@@ -18,13 +34,14 @@
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-rowData let-columns="columns">
-    <tr [pSelectableRow]="rowData">
+    <tr [pSelectableRow]="rowData" [pContextMenuRow]="rowData" [pContextMenuRowIndex]="rowIndex">
       <td *ngFor="let col of columns" pEditableColumn>
-          {{rowData[col.field]}}
+        {{rowData[col.field]}}
       </td>
     </tr>
   </ng-template>
 </p-table>
+
 
 <!--<button mat-raised-button id="search_field" type="search" placeholder="Search" style="margin-right: 10px;" (click)="onKey($event)">Export file</button>
 <button mat-raised-button id="save_but" (click)="saveSheet()" style="margin-right: 10px;">Save Sheet</button>
