enable stylesheet and implement delete in apollo

--- a/src/Frontend/scw/src/app/app.component.scss
+++ b/src/Frontend/scw/src/app/app.component.scss
@@ -1,4 +1,4 @@
-/*
+
 button{
     margin-right: 0.5%;
     float: right;
@@ -7,6 +7,7 @@ button{
     margin-top: 30px;
     width: 99.5%;
     height: auto;
+    background-color: white;
 }
 .header{
     width: 99.5%;
@@ -17,8 +18,11 @@ button{
 
     padding-top: 13px;
     margin-top: 5px;
+    background-color: white;
 }
 .User{
     float: right;
+    background-color: white;
+}   
+body{
 }
-*/
