--- a/src/Frontend/scw/src/app/Dialogs/log-in-sign-up-dialog/log-in-sign-up-dialog.component.html
+++ b/src/Frontend/scw/src/app/Dialogs/log-in-sign-up-dialog/log-in-sign-up-dialog.component.html
@@ -4,19 +4,19 @@
 <div *ngIf="data=='signup'">
     SignUp Dialog
 </div>
-<mat-form-field>    
-    <mat-label>Enter username: </mat-label>   
+<mat-form-field>
+    <mat-label>Enter username: </mat-label>
     <input matInput [(ngModel)]="username">
-</mat-form-field> 
+</mat-form-field>
 <br>
-<mat-form-field>  
+<mat-form-field>
     <mat-label >Enter password: </mat-label>
-    <input matInput [(ngModel)]="password">
-</mat-form-field>  
+    <input matInput [(ngModel)]="password" [type]="hide ? 'password' : 'text'">
+</mat-form-field>
 <br>
-<small>{{message}} 
+<small>{{message}}
     <br/>
   </small>
 <br>
-<button mat-raised-button (click)="Ok()" >Ok</button>   
+<button mat-raised-button (click)="Ok()" >Ok</button>
 <button mat-raised-button (click)="Cancel()" style="float: right">Cancel</button>
