--- a/src/Frontend/scw/src/app/app.component.html
+++ b/src/Frontend/scw/src/app/app.component.html
@@ -12,6 +12,9 @@
             <button mat-menu-item (click)="ClickAllTables()">
               <span>All Tables</span>
             </button>
+            <button mat-menu-item (click)="ClickCollabs()">
+              <span>Collabs</span>
+          </button>
             <button mat-menu-item (click)="Logout()">
                 <span>Logout</span>
             </button>
