--- a/src/Frontend/scw/src/app/all-tables/all-tables.component.html
+++ b/src/Frontend/scw/src/app/all-tables/all-tables.component.html
@@ -1,3 +1,4 @@
+<br>
 <button mat-raised-button accent="primary" style="margin-right: 10px;" (click)="AddDataset()">
     Add DataSet
 </button>
@@ -8,7 +9,7 @@
     <mat-tab *ngFor="let tab of tabs;  let index = index" [label]="tab.displayName">
         <ng-template matTabContent >
             <app-sheet *ngIf="tab.tableType=='Sheet'" [tableId]="tab.tableRefId"></app-sheet>
-            <app-dataset *ngIf="(tab.tableType=='DataSet')" [tableId]="tab.tableRefId"></app-dataset>
+            <app-dataset *ngIf="(tab.tableType=='DataSet')" [tableId]="tab.tableRefId" [isCollab]="false"></app-dataset>
         </ng-template>
     </mat-tab>
 </mat-tab-group>
