--- a/src/Frontend/scw/src/app/app.component.scss
+++ b/src/Frontend/scw/src/app/app.component.scss
@@ -4,10 +4,10 @@ button{
     float: right;
 }
 .SubComponent{
-    margin-top: 30px;
+    margin-top: 15px;
     width: 99.5%;
     height: auto;
-    background-color: white;
+    //background-color: white;
 }
 .header{
     width: 99.5%;
@@ -18,11 +18,11 @@ button{
 
     padding-top: 13px;
     margin-top: 5px;
-    background-color: white;
+    //background-color: white;
 }
 .User{
     float: right;
-    background-color: white;
+    //background-color: white;
 }   
 body{
 }
