--- a/src/Frontend/scw/src/styles.scss
+++ b/src/Frontend/scw/src/styles.scss
@@ -1,5 +1,19 @@
+//@use '~@angular/material' as mat;
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+//@import "../node_modules/primeicons/primeicons.css";
+//@import "../node_modules/primeng/resources/themes/vela-green/theme.css";
+//@import "../node_modules/primeng/resources/primeng.min.css";
+
+/*button{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}*/
+
+
+
+//@include mat.core();
 //deeppurple-amber
 //indigo-pink
-//purple-green
+//purple-green//
+//pink-bluegrey
