add dockerfile and fix ng build

--- a/src/Frontend/scw/src/app/spreadjs/spreadjs.component.css
+++ b/src/Frontend/scw/src/app/spreadjs/spreadjs.component.css
@@ -1,5 +1,5 @@
-@import '../../../node_modules/@grapecity/spread-sheets-designer/styles/gc.spread.sheets.designer.min.css';
-@import '../../../node_modules/@grapecity/spread-sheets/styles/gc.spread.sheets.excel2013white.css';
+/*@import '../../../node_modules/@grapecity/spread-sheets-designer/styles/gc.spread.sheets.designer.min.css';
+@import '../../../node_modules/@grapecity/spread-sheets/styles/gc.spread.sheets.excel2013white.css';*/
 .body {
   padding: 0;
   margin: 0;
