added some features to the admin interface, including corrected stats and improved userlist with tables and more

--- a/src/Frontend/scw/src/app/admin-statistics-page/admin-statistics-page.component.html
+++ b/src/Frontend/scw/src/app/admin-statistics-page/admin-statistics-page.component.html
@@ -1,5 +1,5 @@
 <app-menubar></app-menubar>
 <div class="card">
-  <h5>Stacked</h5>
+  <h5>Tables created (by all Users) per Month</h5>
   <p-chart type="bar" [data]="stackedData" [options]="stackedOptions" (onDataSelect)="selectData($event)" height="70vh" ></p-chart>
 </div>
