--- a/src/Frontend/scw/src/app/menubar/menubar.component.html
+++ b/src/Frontend/scw/src/app/menubar/menubar.component.html
@@ -1,4 +1,4 @@
-<p-menubar [model]="items">
+<p-menubar [model]="items" *ngIf="visibility">
   <div>
     <button type="button" pButton label="Logout" icon="pi pi-power-off" style="margin-left:.25em"></button>
   </div>
