--- a/src/Frontend/scw/src/app/admin-user-list/admin-user-list.component.html
+++ b/src/Frontend/scw/src/app/admin-user-list/admin-user-list.component.html
@@ -30,6 +30,10 @@
         <p-columnFilter type="text" field="role" display="menu"></p-columnFilter>
         <p-sortIcon field="role"></p-sortIcon>
       </th>
+      <th pSortableColumn="role">Quantity of Datasets (Owner)
+        <p-columnFilter type="text" field="role" display="menu"></p-columnFilter>
+        <p-sortIcon field="role"></p-sortIcon>
+      </th>
       <th></th>
       <th style="width: 8rem"></th>
     </tr>
@@ -46,16 +50,20 @@
       <th>
         <input pInputText type="text" (input)="dt.filter($any($event).target.value, 'role', 'contains')" placeholder="Search by Role" class="p-column-filter">
       </th>
+      <th>
+        <input pInputText type="number" (input)="dt.filter($any($event).target.value, 'role', 'bigger')" placeholder="Search by Quantity of DataSets" class="p-column-filter">
+      </th>
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-user>
     <tr [pContextMenuRow]="user">
       <td style="max-width: 10px">
-        <p-tableCheckbox [value]="user" ></p-tableCheckbox>
+        <p-tableCheckbox [value]="user"></p-tableCheckbox>
       </td>
       <td>{{user.userId}}</td>
       <td>{{user.name}}</td>
       <td>{{user.role}}</td>
+      <td (click)="showTablesOfUserDialog(user)">{{user.ownedTables.length}}</td>
       <td>
         <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2" (click)="editUser(user)"></button>
         <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="deleteUser(user)"></button>
@@ -92,6 +100,7 @@
           <p-radioButton id="role3" name="role" value="Admin" [(ngModel)]="user.role"></p-radioButton>
           <label for="role3">Admin</label>
         </div>
+
       </div>
     </div>
 
