--- a/src/Frontend/scw/src/app/Dialogs/remove-collaborations-dialog/remove-collaborations-dialog.component.html
+++ b/src/Frontend/scw/src/app/Dialogs/remove-collaborations-dialog/remove-collaborations-dialog.component.html
@@ -1,9 +1,9 @@
 <p>Remove Collaborator</p>
 <mat-form-field>
-  <mat-label>Collaborators</mat-label>
-  <mat-select [(ngModel)]="selectedCollaborator" name="username">
-    <mat-option *ngFor="let user of collaborators" [value]="user">{{user.name}}</mat-option>
-  </mat-select>
+    <mat-label>Collaborators</mat-label>
+    <mat-select [(ngModel)]="selectedCollaborator" name="username">
+        <mat-option *ngFor="let user of collaborators" [value]="user">{{user.username}}</mat-option>
+    </mat-select>
 
 </mat-form-field>
 <br>
@@ -11,5 +11,5 @@
   <br>
 </small>
 <br>
-<button mat-raised-button (click)="Ok()" >Ok</button>
+<button mat-raised-button (click)="Ok()">Ok</button>
 <button mat-raised-button (click)="Cancel()" style="float: right">Cancel</button>
