--- a/src/Frontend/scw/src/app/admin-statistics-page/admin-statistics-page.component.html
+++ b/src/Frontend/scw/src/app/admin-statistics-page/admin-statistics-page.component.html
@@ -1,5 +1,12 @@
 <app-menubar></app-menubar>
+<!--
 <div class="card">
-    <h5>Tables created (by all Users) per Month</h5>
-    <p-chart type="bar" [data]="stackedData" [options]="stackedOptions" (onDataSelect)="selectData($event)" height="70vh"></p-chart>
+  <h5>Tables created (by all Users) per Month</h5>
+  <p-chart type="bar" [data]="stackedData" [options]="stackedOptions" (onDataSelect)="selectData($event)" height="70vh" ></p-chart>
+</div>
+-->
+
+<div class="card">
+    <h5>Created Tables grouped by Roles</h5>
+    <p-chart type="line" [data]="basicData" [options]="basicOptions"></p-chart>
 </div>
